--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <hr>
       <!-------------------------------------------- Exercice 2 -------------------------------------->
       <h3>Exercice 2</h3>
-      <p>Au double click, modifier la largeur de l'image à <b>1735px</b></p>
+      <p>Au double click sur l'image, modifier la largeur de l'image à <b>1735px</b></p>
       <img src="image1.jpg"/>
 
       <hr>
